--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <h2 class="mb-5 mt-3 font-weight-bold">Contact Us</h2>
                 <form id="form"> 
                     <div class="form-group">
-                        <input type="text" name="name" placeholder="Your name">
-                        <input type="email" name="email" aria-describedby="emailHelp" placeholder="Your email">
+                        <input type="text" name="name" placeholder="Your Name">
+                        <input type="email" name="email" aria-describedby="emailHelp" placeholder="Your Email">
                         <input type="text" name="subject" class="mt-5 d-block" placeholder="Subject">
-                        <textarea id="subMessage" name="message" placeholder="Your Message" cols="80" rows="6" class="mt-5"></textarea>
+                        <textarea id="subMessage" name="message" placeholder="Your Message" cols="80" rows="4" class="mt-5"></textarea>
                     </div>
                     <button type="submit" class="btn-danger mt-3" name="sendmsg">Submit</button>
-                    <p id="success-message">Thanks For Your Message!!!</p>
+                    <p id="success-message" class="text-success">Thanks For Your Message!!!</p>
                 </form>
             </div>
         </div>
