--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="error"></div>
         <div class="row">
             <div class="col-md-4">
-                <img class="mt-5" src="img/postman2.png" alt="">
+                <img class="mt-5" src="img/postman2.png" alt="img-postman">
             </div>
             <div class="col-md-6">
                 <h2 class="mb-5 mt-3 font-weight-bold">Contact Us</h2>
@@ -27,10 +27,7 @@
             </div>
         </div>
     </div>
-
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
-        
-            <script src="script.js"></script>
-        </body>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
+    <script src="script.js"></script>
+</body>
 </html>
